--- a/cell02/ex01/menu.html
+++ b/cell02/ex01/menu.html
@@ -8,11 +8,18 @@
 <body>
 <h2>Menu</h2>
 <div class="dropdown">
-  <button>Dropdown</button>
+  <button>Menu Sandwichs</button>
   <div class="dropdown-content">
-    <a href="#">train 1</a>
-    <a href="#">train 2</a>
+    <div class="photo-container">
+      <a href="https://www.recipetineats.com/tuna-sandwich/" target="_blank">
+        <img src="C:\Users\User\OneDrive - KMITL\fun with code\cell02\Tunasandwich.jpg">Tuna sandwich</a>
+      <a href="https://insanelygoodrecipes.com/panini-recipes/" target="_blank">
+        <img src="C:\Users\User\OneDrive - KMITL\fun with code\cell02\Paninisandwich.jpg">Panini sandwich</a>
+      <a href="https://www.simplyrecipes.com/recipes/shrimp_po_boy_sandwich/" target="_blank"> 
+        <img src="C:\Users\User\OneDrive - KMITL\fun with code\cell02\Shrimppoboysandwich.jpg">Tuna sandwich</a>
+      <a href="https://www.theflavorbender.com/ribbon-sandwiches-rainbow-sandwiches/" target="_blank">
+        <img src="C:\Users\User\OneDrive - KMITL\fun with code\cell02\Ribbonsandwich.jpg">Tuna sandwich</a>
+    <div>
   </div>
-</div>
 </body>
 </html>
