--- a/cell01/ex03/piscineweb.html
+++ b/cell01/ex03/piscineweb.html
@@ -34,7 +34,7 @@
 <body>
     <h1>Piscine Web</h1>
     <div class="photo-container">
-        a href="https://www.youtube.com/watch?v=INscMGmhmX4" target="_blank">
+        <a href="https://www.youtube.com/watch?v=INscMGmhmX4" target="_blank">
             <img src="C:\Users\User\OneDrive - KMITL\fun with code\cell01\pic1.jpg">
         </a>
         <img src="C:\Users\User\OneDrive - KMITL\fun with code\cell01\pic2.jpg">
