--- a/cell03/ex02/calc.html
+++ b/cell03/ex02/calc.html
@@ -1,1 +1,77 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Calculator</title>
+</head>
+<body>
+    <h1>Basic Calculator</h1>
+    <form id="calculatorForm">
+        <input type="number" id="leftOperand" placeholder="Left operand" min="0" required>
+        <select id="operator">
+            <option value="+">+</option>
+            <option value="-">-</option>
+            <option value="*">*</option>
+            <option value="/">/</option>
+            <option value="%">%</option>
+        </select>
+        <input type="number" id="rightOperand" placeholder="Right operand" min="0" required>
+        <input type="submit" value="Try me!">
+    </form>
+    <script>
+        const form = document.getElementById('calculatorForm');
+        const leftOperandInput = document.getElementById('leftOperand');
+        const rightOperandInput = document.getElementById('rightOperand');
+        const operatorSelect = document.getElementById('operator');
+        form.addEventListener('submit', function(event) {
+            event.preventDefault();
+            const leftOperand = parseInt(leftOperandInput.value);
+            const rightOperand = parseInt(rightOperandInput.value);
+            const operator = operatorSelect.value;
+            if (isNaN(leftOperand) || isNaN(rightOperand) || leftOperand < 0 || rightOperand < 0) {
+                alert("Error :(");
+                console.error("Error :(");
+                return;
+            }
+            let result;
+            switch (operator) {
+                case '+':
+                    result = leftOperand + rightOperand;
+                    break;
+                case '-':
+                    result = leftOperand - rightOperand;
+                    break;
+                case '*':
+                    result = leftOperand * rightOperand;
+                    break;
+                case '/':
+                    if (rightOperand === 0) {
+                        alert("It's over 9000!");
+                        console.error("It's over 9000!");
+                        return;
+                    }
+                    result = leftOperand / rightOperand;
+                    break;
+                case '%':
+                    if (rightOperand === 0) {
+                        alert("It's over 9000!");
+                        console.error("It's over 9000!");
+                        return;
+                    }
+                    result = leftOperand % rightOperand;
+                    break;
+                default:
+                    alert('Error :(');
+                    console.error('Error :(');
+                    return;
+            }
+            alert('Result: ' + result);
+            console.log('Result: ' + result);;
+        });
+        setInterval(function() {
+            alert('Please, use me...');
+        }, 30000);
+    </script>
+</body>
+</html>
