--- a/cell02/ex02/parallax.html
+++ b/cell02/ex02/parallax.html
@@ -1,22 +1,17 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parallax</title>
     <link rel="stylesheet" href="parallax.css">
 </head>
 <body>
-    <section class="content-section">
-        <p>Let me show you Something cute</p>
-        <div class="split-images-container">
-            <div class="image-split top"></div>
-            <p class="split-text">This is cat! oops...no eyes...</p>
-            <div class="image-split bottom"></div>
-        </div>
-    </section>
-    <section class="content-section">
-        <p>This is also cat...</p>
-        <img src="C:\Users\User\OneDrive - KMITL\fun with code\cell02\cat1.jpg" class="content-image-full">
-    </section>
+    <div class="parallax img1">
+        <div class="parallax-text">Let me show you something cute!</div>
+    </div>
+    <div class="content">
+        <p>This is cat</p>
+    </div>
+    <div class="parallax img2">
+        <div class="parallax-text">This is also cat...</div>
+    </div>
 </body>
 </html>
