--- a/rush/homepage.html
+++ b/rush/homepage.html
@@ -14,12 +14,12 @@
         </div>
     </section>
     <section class="profiles">
-        <a href="file:///C:/Users/User/OneDrive%20-%20KMITL/fun%20with%20code/cell04/psansook.html" class="profile">
+        <a href="psansook.html" class="profile">
             <div class="profile-content">
                 <h2>psansook</h2>
             </div>
         </a>
-        <a href="file:///C:/Users/User/OneDrive%20-%20KMITL/fun%20with%20code/cell04/ppikrong.html" class="profile">
+        <a href="ppikrong.html" class="profile">
             <div class="profile-content">
                 <h2>ppikrong</h2>
             </div>
