--- a/rush/ppikrong.html
+++ b/rush/ppikrong.html
@@ -11,14 +11,14 @@
         <div class="container">
             <h1><a class="logo" href="#home">ppikrong</a></h1>
             <ul id="menu">
-                <li><a href="file:///C:/Users/User/OneDrive%20-%20KMITL/fun%20with%20code/cell04/homepage.html">Home</a></li>
+                <li><a href="/homepage.html">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
     </nav>
     <div id="home">
-            <img class="profile-picture" src="C:\Users\User\OneDrive - KMITL\fun with code\cell04\cover3.jpg">
+            <img class="profile-picture" src="https://th.bing.com/th/id/OIP.vR9EhtpuKJ-nwsOovivOkQAAAA?rs=1&pid=ImgDetMain">
             <h1>Phichamol Pikrongan</h1>
             <p>su su su supernova !!</p>
     </div>
