--- a/rush/psansook.html
+++ b/rush/psansook.html
@@ -11,14 +11,14 @@
         <div class="container">
             <h1><a class="logo" href="#home">psansook</a></h1>
             <ul id="menu">
-                <li><a href="file:///C:/Users/User/OneDrive%20-%20KMITL/fun%20with%20code/cell04/homepage.html">Home</a></li>
+                <li><a href="/homepage.html">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
     </nav>
     <div id="home">
-            <img class="profile-picture" src="C:\Users\User\OneDrive - KMITL\fun with code\cell04\psansook.jpg">
+            <img class="profile-picture" src="https://i.pinimg.com/736x/a7/60/06/a7600605617a557585d4d3d0341bc148.jpg">
             <h1>Poonnicha Sansook</h1>
             <p>I do not like math!</p>
     </div>
